# rust-actix-api-example

./: Cargo.toml  README.md
migrations/2024-11-09-011146_create_movies/: down.sql
src/: main.rs
src/database/: database_connection.rs
src/models/: mod.rs  movie.rs
src/routers/: http_server.rs  mod.rs  movie_router.rs
