[package]
name = "rust-api-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
chrono =  { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["postgres", "chrono", "r2d2"] }
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.104", features = ["derive"] }
